@@ -13,7 +13,7 @@ mchange-commons-java.dist.dir=lib
 # is intended to be built are shown below. usually you should leave 
 # these alone.
 #
-mchange-commons-java.version=0.2.4
+mchange-commons-java.version=0.2.5
 mchange-commons-java.jar.file.name=mchange-commons-java-${mchange-commons-java.version}.jar
 mchange-commons-java.jar.file=${mchange-commons-java.dist.dir}/${mchange-commons-java.jar.file.name}
 mchange-commons-java.sources.jar.file=${mchange-commons-java.dist.dir}/mchange-commons-java-${mchange-commons-java.version}-sources.jar
